# nerva

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_START.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  INTER_SYSTEM_GPU_NIC_COM.md  LICENSE  MAIN_INFO.md  PHASE_2_LATENCY_LEDGER.md  README.md  ROADMAP.md  VLLM_LATENCY_RESULTS.md
crates/nerva/: Cargo.toml
crates/nerva-bench/: Cargo.toml
crates/nerva-bench/src/: acceptance.rs  artifact.rs  cli.rs  json.rs  main.rs  model_io.rs  parity.rs  parse.rs  probes.rs  tests.rs
crates/nerva-bench/src/acceptance/: artifact.rs  audit.rs  backend.rs  correctness.rs  environment.rs  execution.rs  files.rs  manifest.rs  measurements.rs  memory_loop.rs  mgpu.rs  mod.rs  model.rs  perf.rs  phase.rs  production.rs  queue.rs  report.rs  request.rs  resident_weights.rs  runner.rs  runtime_checks.rs  security.rs  token.rs  transport.rs  vllm.rs
crates/nerva-bench/src/artifact/: dispatch.rs  metadata.rs  mod.rs  model.rs  run.rs
crates/nerva-bench/src/cli/: cuda.rs  cuda_rt.rs  cuda_rt_equal_bytes.rs  exit.rs  mod.rs  model.rs  probes.rs  runner.rs  usage.rs  weights_io.rs
crates/nerva-bench/src/model_io/: config.rs  deepseek.rs  mod.rs  resident.rs  safetensors.rs
crates/nerva-bench/src/parity/: compare.rs  hash.rs  json.rs  mod.rs  parser.rs  run.rs  summary.rs  tests.rs
crates/nerva-bench/src/perf/: external.rs  json.rs  measurement.rs  mod.rs  run.rs  summary.rs
crates/nerva-bench/src/probes/: backend.rs  compute.rs  kv.rs  measurements.rs  memory_loop.rs  mgpu.rs  mod.rs  phase.rs  projection.rs  queue.rs  runtime.rs  synthetic.rs  token.rs  transaction.rs  transport.rs
crates/nerva-bench/src/tests/: acceptance.rs  artifact.rs  deepseek.rs  experimental_rt.rs  hf_cuda_decode.rs  hf_cuda_generate.rs  hf_cuda_session.rs  hf_cuda_session_loop.rs  hf_cuda_session_stream.rs  hf_cuda_shared_fork_batch.rs  hf_decode.rs  hygiene.rs  json.rs  mod.rs  parity.rs  perf.rs  safetensors.rs  support.rs
crates/nerva-model/: Cargo.toml
crates/nerva-model/src/: attention.rs  common.rs  hf.rs  lib.rs  model.rs  reference.rs  tests.rs  tiny.rs  warm_compute.rs  weights.rs
crates/nerva-model/src/attention/: block.rs  exact.rs  scratch.rs  smoke.rs
crates/nerva-model/src/causal_lm/: context.rs  context_scratch.rs  decode.rs  files.rs  load_options.rs  loader.rs  mod.rs  sample.rs  smoke.rs  summary.rs  types.rs
crates/nerva-model/src/common/: dtype.rs  hash.rs  json.rs  math.rs  mod.rs  rope.rs  shape.rs  token.rs  validate.rs
crates/nerva-model/src/hf/: architecture.rs  contract.rs  deepseek.rs  deepseek_runtime.rs  hash.rs  linear_attention.rs  metadata.rs  mod.rs  parser.rs  probe.rs  tokenizer.rs  validate.rs
crates/nerva-model/src/model/: tests.rs
crates/nerva-model/src/precision/: bits.rs  block.rs  file_smoke.rs  mod.rs  scratch.rs  smoke.rs
crates/nerva-model/src/prompt/: decode.rs  mod.rs  summary.rs  vocabulary.rs
crates/nerva-model/src/reference/: block.rs  contract.rs  mhc.rs  mod.rs  moe.rs  router.rs  scratch.rs  smoke.rs
crates/nerva-model/src/tests/: attention.rs  causal_lm.rs  causal_lm_bias.rs  deepseek.rs  hf.rs  hf_contract.rs  hf_head_dim.rs  mod.rs  precision.rs  precision_bias.rs  precision_rope.rs  prompt.rs  qwen3.rs  reference.rs  safetensors.rs  support.rs  tiny.rs  warm.rs  weights.rs
crates/nerva-model/src/tiny/: mod.rs  model.rs  output.rs  precision.rs  scratch.rs  smoke.rs
crates/nerva-model/src/warm_compute/: mod.rs  probe.rs  strategy.rs  summary.rs
crates/nerva-model/src/weights/: file.rs  hash.rs  layout.rs  manifest.rs  mod.rs  safetensors.rs  tensor.rs
crates/nerva-runtime/: Cargo.toml
crates/nerva-runtime/src/: capabilities.rs  engine.rs  graph.rs  lib.rs  probes.rs  token.rs  transport.rs  weights.rs
crates/nerva-runtime/src/capabilities/: discovery.rs  dma_buf.rs  hip.rs  json.rs  linux.rs  mod.rs  snapshot.rs  topology.rs
crates/nerva-runtime/src/correctness/: case.rs  exactness.rs  mod.rs  outcome.rs  probe.rs  runtime.rs  summary.rs  tests.rs  validator.rs
crates/nerva-runtime/src/engine/: critical_path.rs  cuda.rs  cuda_block.rs  hf_cuda.rs  kv_probe.rs  memory_loop.rs  mod.rs  multi_gpu.rs  phase_handoff.rs  runtime.rs  shared_queue.rs  static_arena.rs  synthetic.rs  tests.rs  transaction.rs  transport.rs
crates/nerva-runtime/src/execution/: mod.rs  plan.rs  probe.rs  summary.rs  types.rs
crates/nerva-runtime/src/graph/: cuda.rs  descriptor.rs  layout.rs  mod.rs  pool.rs
crates/nerva-runtime/src/memory_loop/: mod.rs  (+9 more)
crates/nerva/src/: cli.rs  json.rs  main.rs  openai.rs
native/cuda/: CMakeLists.txt  deepseek_quant.cuh  graph_executor.cu  nerva_cuda_api.cpp  nerva_cuda_api.h  nerva_cuda_backend_contract.cu  nerva_cuda_block_forward.cu  nerva_cuda_deepseek_kv.cu  nerva_cuda_deepseek_mhc.cu  nerva_cuda_deepseek_mhc_fused.cu  nerva_cuda_deepseek_mla.cu  nerva_cuda_deepseek_moe.cu  nerva_cuda_deepseek_quant.cu  nerva_cuda_deepseek_router.cu  nerva_cuda_device_smoke.cu  nerva_cuda_experimental_rt.cu  nerva_cuda_greedy_sampler.cu  nerva_cuda_hf_decode_chain.cu  nerva_cuda_hf_decode_sequence.cu  nerva_cuda_hf_decode_step.cu  nerva_cuda_hf_sampler.cu  nerva_cuda_projection_bench.cu  nerva_cuda_synthetic_graph.cu  nerva_cuda_tiered_attention.cu  nerva_cuda_tiny_block.cu  nerva_cuda_tiny_decode.cu  smoke_kernel.cu  synthetic_decode.cu  token_ring_kernels.cu
native/cuda/deepseek/: deepseek_quant.cuh  deepseek_router.cuh  nerva_cuda_deepseek_kv.cu  nerva_cuda_deepseek_mhc.cu  nerva_cuda_deepseek_moe.cu  nerva_cuda_deepseek_quant.cu
native/cuda/hf_decode_sequence/: attention_kernels.cu  device_ops.cuh  kernels.cu  kernels.cuh  prefill_kernels.cu  projection.cu  projection.cuh  sampler.cu  sampler.cuh  session_api_batch_fork_destroy.inc.cu  session_api_layer_projection_batch.inc.cu  session_api_lifecycle.inc.cu  session_api_oneshot.inc.cu  session_api_projection_batch.inc.cu  session_common.inc.cu  session_cudnn.inc.cu  session_decode_prefill.inc.cu  session_graph_result.inc.cu  session_prelude.inc.cu  session_profile.inc.cu  session_state.cuh  types.cuh  weights.cu  weights.cuh
(+1004 files in other folders)
