[package]
name = "nerva-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
nerva-core.workspace = true
nerva-cuda.workspace = true
nerva-kernel-contracts.workspace = true
nerva-model.workspace = true
nerva-runtime.workspace = true
