[package]
name = "nerva-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
nerva-core.workspace = true
nerva-ledger.workspace = true
serde_json = "1"
tokenizers = "0.20"
