[package]
name = "nerva-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
nerva-core.workspace = true
nerva-cuda.workspace = true
nerva-ledger.workspace = true
nerva-memory.workspace = true
