[package]
name = "nerva"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
actix-web = { version = "4.14", default-features = false, features = ["http2"] }
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
nerva-core.workspace = true
nerva-model.workspace = true
nerva-runtime.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
